Bug 153657 - NVDA does not read Fontwork style title
Summary: NVDA does not read Fontwork style title
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.3 release
Hardware: All All
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:7.6.0
Keywords: accessibility
Depends on:
Blocks: a11y, Accessibility 106634
  Show dependency treegraph
 
Reported: 2023-02-16 07:11 UTC by افشین
Modified: 2023-09-25 06:50 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description افشین 2023-02-16 07:11:25 UTC
Hello.

I use NVDA screen reader. 

Insert >> Fontwork >> Select Fontwork style:

The screen reader should read the Fontwork style title, but it doesn't!



Version: 7.5.0.3 (X86_64) / LibreOffice Community
Build ID: 50(Build:3)
CPU threads: 2; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: fa-IR (en_US.UTF-8); UI: en-US
Ubuntu package version: 1:7.5.0~rc3-0ubuntu0.22.04.1~lo1
Calc: threaded
Comment 1 Michael Weghorn 2023-03-07 15:34:40 UTC
Thanks for your report!

(In reply to افشین from comment #0)
> I use NVDA screen reader.

I'm surprised by the mention of NVDA and Linux/Ubuntu at the same time, since I know NVDA as a screen reader for Windows only. Is this really NVDA on Linux or some other setup?


I can reproduce the issue with Orca on Linux.

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 0484a9a3f5e2ecb678f6fb41bbb251529e89c00d
CPU threads: 12; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded
Comment 2 افشین 2023-03-08 04:27:05 UTC
Michael, I'm sorry.
When I reported this bug, I was using Linux and I copied my LibreOffice data under Linux!
Comment 3 Michael Weghorn 2023-03-08 06:07:58 UTC
(In reply to افشین from comment #2)
> Michael, I'm sorry.
> When I reported this bug, I was using Linux and I copied my LibreOffice data
> under Linux!

No problem, thanks for the clarification!
Comment 4 Michael Weghorn 2023-03-09 08:16:07 UTC
Pending Gerrit change with which NVDA announces the fontwork style title when an element gets focus:

https://gerrit.libreoffice.org/c/core/+/148523

The case of using Orca with the gtk3 VCL plugin on Linux needs more changes, since GtkInstanceIconView is missing more for a11y as compared to the SalInstanceIconView implementation used everywhere else.
Comment 5 Commit Notification 2023-03-10 10:48:34 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1fbf95190ea0b3f14060193c51ff31ae178a992a

tdf#153657 a11y: Set tooltip/a11y desc for fontwork styles

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-03-10 10:49:36 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ba0e36e607d1c380fd09b6725a4ebcb69ff399de

tdf#153657 tdf#140659 gtk3 a11y: Use IconView item tooltip as a11y desc

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Michael Weghorn 2023-03-10 10:53:50 UTC
(In reply to Michael Weghorn from comment #4)
> The case of using Orca with the gtk3 VCL plugin on Linux needs more changes,
> since GtkInstanceIconView is missing more for a11y as compared to the
> SalInstanceIconView implementation used everywhere else.

This is implemented now as well, so announcement works in my tests for both, NVDA on Windows and Orca/gtk3 on Linux now.
Comment 8 افشین 2023-09-23 07:38:36 UTC
Hello. 

It seems that the NVDA can not read the information on the screen when selecting charts or options of charts. 
Is it necessary to open a new bug?

I attach a film about this bug.
Comment 9 Michael Weghorn 2023-09-25 06:50:26 UTC
(In reply to افشین from comment #8)
> It seems that the NVDA can not read the information on the screen when
> selecting charts or options of charts. 
> Is it necessary to open a new bug?

Yes, since this is a different issue, it should be handled in a separate bug report.
I see you've already opened bug 157398 for it, thanks!