tdf#153657 a11y: Set tooltip/a11y desc for fontwork styles

Add a map between ID and title and use that in a newly
introduced tooltip query handler to return the item's title
so it is shown as a tooltip.

This also implies that the title is used as the accessible
description for the items for the non-gtk case, see
`SalInstanceIconView::EntryAccessibleDescriptionHdl`,
introduced in

    commit 2a28ebeef5ea3e2b01d836a7233d2316b765bf38
    Date:   Wed Jun 1 11:18:26 2022 +0300

        Accessibility for IconView

Therefore, the NVDA screen reader on Windows now
announces the items using their title when they
receive focus.

Change-Id: Ic77cf485ed4b2b413d3d3368c15b788d693111cd
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148523
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>