include/svx/fontworkgallery.hxx
@@ -23,6 +23,7 @@
 
 #include <svx/svxdllapi.h>
 #include <vcl/weld.hxx>
+#include <map>
 #include <vector>
 
 class SdrView;
@@ -53,6 +54,8 @@ class SAL_WARN_UNUSED SVXCORE_DLLPUBLIC FontWorkGalleryDialog final : public wel
     SdrModel*           mpDestModel;
 
     std::vector<VclPtr< VirtualDevice >> maFavoritesHorizontal;
+    // mapping between item ID and item title
+    std::map<OUString, OUString> maIdToTitleMap;
 
     std::unique_ptr<weld::IconView> maCtlFavorites;
     std::unique_ptr<weld::Button> mxOKButton;
@@ -63,6 +66,7 @@ class SAL_WARN_UNUSED SVXCORE_DLLPUBLIC FontWorkGalleryDialog final : public wel
 
     DECL_DLLPRIVATE_LINK(DoubleClickFavoriteHdl, weld::IconView&, bool);
     DECL_DLLPRIVATE_LINK(ClickOKHdl, weld::Button&, void );
+    DECL_DLLPRIVATE_LINK(QueryTooltipHandler, const weld::TreeIter&, OUString);
 
 public:
     FontWorkGalleryDialog(weld::Window* pParent, SdrView& rView);
